FIx cut off names

--- a/src/app/biography-overview/biography-overview.component.scss
+++ b/src/app/biography-overview/biography-overview.component.scss
@@ -15,7 +15,7 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  padding-top: 100px;
+  padding-top: 60px;
   height: 100%;
 }
 
